--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,25 @@
+:root {
+  /*Fonts*/
+  /*Colors*/
+  /*Sizes*/
+  --h1: 3rem;
+  --p: 1.6rem;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 body {
+  font-size: var(--p);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
