Added chart and responsive css.

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,5 +1,6 @@
 #apiForm {
-  max-width: 450px;
+  min-width: 320px;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -24,4 +25,29 @@
   font-size: small;
   margin: 7px 0;
   color: rgb(90 87 87);
+}
+
+#apiForm button {
+  height: 35px;
+  width: 80px;
+  margin-top: 32px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 900px) {
+  #apiForm {
+    max-width: unset;
+    height: 150px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #apiForm fieldset {
+    height: 120px;
+  }
+
+  #apiForm input {
+    width: 400px;
+  }
 }
