--- a/src/components/Charts/Charts.css
+++ b/src/components/Charts/Charts.css
@@ -4,3 +4,45 @@ section {
   display: grid;
   place-items: center;
 }
+
+.results-wrapper {
+  max-width: 80%;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+  gap: 20px;
+}
+
+.results-title {
+  margin-bottom: 10px;
+}
+
+.item {
+  width: 300px;
+  padding: 5px;
+  border: 1px solid gray;
+}
+
+.item-id {
+  margin-top: 5px;
+}
+
+.item-title {
+  margin-bottom: 15px;
+}
+
+.item-chart {
+  border-top: 1px solid gray;
+}
+
+@media screen and (min-width: 900px) {
+  .results-wrapper {
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    gap: 10px;
+  }
+
+  .item {
+    width: 450px;
+    height: 362px;
+  }
+}
