Fix for input zoom mobile.

--- a/src/global.css
+++ b/src/global.css
@@ -26,3 +26,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+input[type='text'] {
+  font-size: inherit;
+  font-family: inherit;
+}
