mod fix for text input ios.

--- a/src/global.css
+++ b/src/global.css
@@ -28,6 +28,6 @@ body {
 }
 
 input[type='text'] {
-  font-size: inherit;
-  font-family: inherit;
+  font-size: 16px;
+  font-family: var(--ff-content);
 }
